few alignment fixes.

--- a/web-app/css/cgrails/default/less/discipline-list.less
+++ b/web-app/css/cgrails/default/less/discipline-list.less
@@ -156,7 +156,29 @@
 	    	margin-bottom: 10px;
 	    	margin-left: 0px;
 	 	}
-	 	
+		.discipline-music-container{
+				.playlist {
+					li 	{
+							a {
+								white-space:nowrap;
+								font-size:100%;
+								span{
+									margin-right:1px;
+									margin-left:1px;
+								}
+							}
+							.timing {
+								padding: 1px;
+								letter-spacing:-1;
+								font-size:67%;
+								#sm2_timing {
+									//margin-top: 2px;
+								}
+								
+							}
+					}
+				}
+			}	 	
 	 	p	{
 	 		display:inline;
 	 		margin:0px;
