--- a/web-app/css/cgrails/default/less/home.less
+++ b/web-app/css/cgrails/default/less/home.less
@@ -226,7 +226,7 @@
 						font-size:16px;
 					}
 					small {
-						font-size:14px;
+						font-size:11px;
 					}
 				}
 				a {
